[fix] profile_edit, signout 수정 작업

--- a/users/templates/users/change_pw.html
+++ b/users/templates/users/change_pw.html
@@ -93,6 +93,8 @@
       newpwd1.focus();
       return false;
     }
+
+    location.href = "{% url 'posts:home' %}";
   }
 </script>
 {% endblock %}
