--- a/static/css/profile_edit.css
+++ b/static/css/profile_edit.css
@@ -133,7 +133,7 @@ main {
   border: 1px solid #8c8c8c;
 }
 
-.input__edit__desc {
+.input__edit__desc textarea {
   width: 30rem;
   height: 10rem;
   border-radius: 0.5rem;
@@ -226,7 +226,7 @@ main {
 /* signout 모달 */
 /* signout 모달 */
 /* signout 모달 */
-#signout__modal.modal-overlay {
+/* #signout__modal.modal-overlay {
   display: none;
   width: 100%;
   height: 300%;
@@ -332,7 +332,7 @@ main {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
+} */
 /* signout 모달 */
 /* signout 모달 */
 /* signout 모달 */
