--- a/users/templates/users/social_error.html
+++ b/users/templates/users/social_error.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>프로필수정</title>
+    <title>Document</title>
   </head>
   <body>
-    <form method="post" action="{% url 'users:profile_edit' id %}">
-      {% csrf_token %} {{form.as_p}} <button type="submit">제출</button>
+    <h2>이미 존재하는 이메일입니다</h2>
+    <p>일반 회원으로 로그인해주세요</p>
+    <form method="get" action="{% url 'users:login' %}">
+      <button type="submit">로그인</button>
     </form>
   </body>
 </html>
