[fix] profile_img 시도중..

--- a/users/templates/users/profile_edit.html
+++ b/users/templates/users/profile_edit.html
@@ -1,9 +1,9 @@
 {% extends 'users/account_base.html' %} {% block content %}
-
+{% load static %}
 <main>
   <div id="profile-edit__container">
     <span class="profile-edit__title">프로필 수정</span>
-    <form method="post" action="{% url 'users:profile_edit' id %}">
+    <form method="post" action="{% url 'users:profile_edit' id %}" enctype="multipart/form-data">
       {% csrf_token %}
         <div class="input__edit__name">
             {{ form.name.errors }}
@@ -49,7 +49,12 @@
             />
             <label for="id_profile_img">
                 <div id="input__img__container">
-                    <img src="{{user.profile_img}}" onerror="this.style.display='none'">
+                    {% if user.profile_img %}
+                    <img src="{{user.profile_img.url}}" alt="profile_img"></img>
+                    {% else %}
+                    <img src="{% static 'img/moco_symbol.png' %}" alt="profile_img"></img>
+                    {% endif %}
+                    <!-- <img src="" onerror="this.style.display='none'"> -->
                     <div id="camera__img">
                         <i class="fa-solid fa-camera fa-2xl"></i>
                     </div>
