[feat] 검색 기능 수정, 프로필 보기 수정

--- a/place/templates/place/home.html
+++ b/place/templates/place/home.html
@@ -7,22 +7,25 @@
     <div class="content-category__item"><a href="{% url 'place:home' 'studyroom' %}">스터디룸</a></div>
     <div class="content-category__item"><a href="{% url 'place:home' 'etc' %}">그 외</a></div>
   </div>
-    <form class="search"> {% csrf_token %} <!--검색-->
+
+  <form method="GET">
+     <!--검색-->
       <i class="fa-solid fa-magnifying-glass"></i>
+      {% if search %}
+      <input value="{{ search }}" type="text" name="search" class="search__input" placeholder="관심 모각코를 검색해보세요">
+      <button type="submit"">검색</button>
+      {% else %}
       <input type="text" name="search" class="search__input" placeholder="관심 모각코를 검색해보세요">
-      <input type="button" value="검색" class="search__button">
-    </form>
-    <form class="tag"> {% csrf_token %} <!--태그 검색-->
+      <button type="submit"">검색</button>
+      {% endif %}
+      <!--태그 검색-->
       <input type="text" name="tag" class="tag__input" placeholder="태그로 검색해보세요">
       <i class="fa-solid fa-hashtag"></i>
       <div class="tag__reset">
         <i class="fa-solid fa-arrows-rotate" style="color: black;"></i>
         <input type="submit" name="reset" class="tag__reset" value="초기화">
       </div>
-    </form>
-  <form class="sort" method="GET"> <!--select box로 임시 대체-->
-    {% csrf_token %}
-		<select name="sort" onchange="this.form.submit();"> 
+		<select id="sort" name="sort" onchange="this.form.submit()">
 			<option value="default">--정렬기준--</option>
 			<option value="latest" {% if sort == "latest" %}selected{% endif %}>최신순</option>
 			<option value="like" {% if sort == "like" %}selected{% endif %}>좋아요순</option>
@@ -56,4 +59,20 @@
     </ul>
   </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+  function myFunction() {
+    const urlParams = new URLSearchParams(window.location.search);
+    const search = urlParams.get('search');
+    var myElement = document.getElementById('sort');
+    if (search == 'null'){
+      myElementValue = '?sort=' + myElement.value;
+    }
+    else {
+      myElementValue = '?search=' + search + '&' + '?sort=' + myElement.value;
+    }
+    location.href = myElementValue
+    
+  }
+  </script>
 {% endblock %}
