--- a/users/templates/users/profile_view.html
+++ b/users/templates/users/profile_view.html
@@ -29,8 +29,8 @@
         <h2>기본정보</h2>
         <div class="profile-top__info__list">
           <div><span>나이</span><span>{{age}}</span></div>
-          <div><span>직업</span><span>{{user.job}}</span></div>
-          <div><span>성별</span><span>{{user.gender}}</span></div>
+          <div><span>직업</span><span>{{user.get_job_display}}</span></div>
+          <div><span>성별</span><span>{{user.get_gender_display}}</span></div>
         </div>
       </div>
       <div class="profile-top__desc">
