--- a/users/templates/users/find_id.html
+++ b/users/templates/users/find_id.html
@@ -1,4 +1,5 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
+{% load static %}
 <main>
   <div class="idsearch__container">
     <div class="idsearch__div">
