--- a/users/templates/users/reset_pw_confirm.html
+++ b/users/templates/users/reset_pw_confirm.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 <main>
   <!--Password Reset Confirm-->
   <div id="reset-pw-cf__container">
