--- a/users/templates/users/signout.html
+++ b/users/templates/users/signout.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 
 <main>
   <div id="profile-edit__container">
