--- a/users/templates/users/change_pw.html
+++ b/users/templates/users/change_pw.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 <main>
   <form method="POST" action="{% url 'users:change_pw' %}">
     {% csrf_token %}
