--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 <main>
   <div class="login__container">
     <div class="login__nor">
