--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
     <!--login main-->
     <main>
       <div class="signup__container">
