--- a/users/templates/users/reset_pw.html
+++ b/users/templates/users/reset_pw.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 <main>
   <div id="reset-pw__container">
     <div id="reset-pw__title">
