--- a/users/templates/users/reset_pw_complete.html
+++ b/users/templates/users/reset_pw_complete.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 <main>
   <div id="reset-pw-com__container">
     <div id="reset-pw-com__title">
