--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,4 +1,4 @@
-{% extends 'users/account_base.html' %} {% block content %}
+{% extends 'users/base.html' %} {% block content %}
 <main>
   <form
       action="{% url 'users:signup' %}"
