--- a/users/templates/users/account_base.html
+++ b/users/templates/users/account_base.html
@@ -19,7 +19,9 @@
     <link rel="stylesheet" href="{%static 'css/reset_pw_complete.css' %}" />
     <link rel="stylesheet" href="{%static 'css/find_pw.css' %}" />
     <link rel="stylesheet" href="{%static 'css/profile_edit.css' %}" />
+    <link rel="stylesheet" href="{%static 'css/profile_add.css' %}" />
     <link rel="stylesheet" href="{%static 'css/signout.css' %}" />
+    <link rel="stylesheet" href="{%static 'css/social_error.css' %}" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&family=Noto+Sans:wght@600&display=swap"
