--- a/users/templates/users/profile_add.html
+++ b/users/templates/users/profile_add.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>프로필추가</title>
-  </head>
-  <body>
-    <h2>추가정보를 입력해주세요</h2>
-    <form method="post" action="{% url 'users:profile_add' id %}">
-      {% csrf_token %} {{form.as_p}} <button type="submit">제출</button>
-    </form>
-  </body>
-</html>
+{% extends 'users/account_base.html' %} {% block content %}
+<h2>추가정보를 입력해주세요</h2>
+<form method="post" action="{% url 'users:profile_add' id %}">
+  {% csrf_token %} {{form.as_p}} <button type="submit">제출</button>
+</form>
+{% endblock %}
