--- a/users/templates/users/social_error.html
+++ b/users/templates/users/social_error.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h2>이미 존재하는 이메일입니다</h2>
-    <p>일반 회원으로 로그인해주세요</p>
+{% extends 'users/account_base.html' %} {% block content %}
+<main>
+  <div id="social-error__container">
+    <div id="social-error__title">
+      <span>❗️ 이미 존재하는 이메일입니다 ❗️</span>
+    </div>
+    <div class="hr">
+      <hr />
+    </div>
+    <div id="social-error__desc">일반 회원으로 로그인해주세요</div>
     <form method="get" action="{% url 'users:login' %}">
-      <button type="submit">로그인</button>
+      <button id="social-error__btn" type="submit">로그인</button>
     </form>
-  </body>
-</html>
+  </div>
+</main>
+{% endblock %}
