[feat]post_write 팝업창 구현

--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -142,7 +142,7 @@
               <span>김피로</span>
             </div>
             <div id="main__info_div__post_right__info_time">
-              <span>{{post.published_at}}</span>
+              <span>{{post.published_at|date:"Y-m-d f " }}</span>
               <!--등록 일자 형식 수정하기-->
             </div>
           </div>
