--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -25,7 +25,7 @@
             <span>{{post.user.nickname}}</span>
           </div>
           <div id="main_detail__top__time">
-            <span>{{post.published_at|date:"Y. m. d" }}</span>
+            <span>{{post.published_at|date:"Y. m. d a f" }}</span>
           </div>
         </div>
       </div>
@@ -34,12 +34,41 @@
           {% if can_revise and post.activation %}
           <form action="{% url 'posts:close' post.id %}" method="post">
             {% csrf_token %}
-            <button>모집완료로 전환</button>
+            <!--모집 완료 전환 모달-->
+            <div id="main_detail__complete_modal_btn">
+              <a>모집완료로 전환</a>
+            </div>
+            <div id="main_detail__complete_modal">
+              <div class="main_detail__complete_modal__overlay">
+                <div class="main_detail__complete_modal__content">
+                  <div class="main_detail__complete_modal__close_btn">X</div>
+                  <div class="main_detail__complete_modal__cancel_btn">다시 생각해볼게요</div>
+                  <h1>모집완료로 전환하시겠습니까?</h1>
+                  <button class="main_detail__complete_btn" type="submit">
+                    네, 전환하겠습니다
+                  </button>
+                </div>
+              </div>
+            </div>
           </form>
           <a href="{% url 'posts:update' post.id%}">수정</a>
           <form action="{% url 'posts:delete' post.id %}" method="post">
             {% csrf_token %}
-            <button>삭제</button>
+            <div id="main_detail__delete_modal_btn">
+              <a>삭제</a>
+            </div>
+            <div id="main_detail__delete_modal">
+              <div class="main_detail__delete_modal__overlay">
+                <div class="main_detail__delete_modal__content">
+                  <div class="main_detail__delete_modal__close_btn">X</div>
+                  <div class="main_detail__delete_modal__cancel_btn">다시 생각해볼게요</div>
+                  <h1>정말 삭제하시겠습니까?</h1>
+                  <button class="main_detail__delete_btn" type="submit">
+                    네, 삭제하겠습니다
+                  </button>
+                </div>
+              </div>
+            </div>
           </form>
           {% elif can_revise and not post.activation %}
           <div>모집완료</div>
@@ -132,7 +161,7 @@
               <span>{{comment.user.nickname}}</span>
             </div>
             <div id="main_detail__comments__contents__time">
-              <span>2022-07-28</span>
+              <span>{{comment.published_at|date:"Y. m. d" }}</span>
             </div>
           </div>
         </div>
@@ -216,7 +245,7 @@
                   <span>{{review.user.nickname}}</span>
                 </div>
                 <div class="main_detail__contents__profile_time">
-                  <span>{{review.write_at}}</span>
+                  <span>{{review.write_at|date:"Y. m. d" }}</span>
                 </div>
               </div>
             </div>
@@ -265,7 +294,7 @@
                   <span>{{review.user.nickname}}</span>
                 </div>
                 <div class="main_detail__contents__profile_time">
-                  <span>{{review.write_at}}</span>
+                  <span>{{review.write_at|date:"Y. m. d." }}</span>
                 </div>
               </div>
             </div>
@@ -319,6 +348,43 @@
   {%endif%}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<!--모집 완료 전환 모달-->
+<script>
+const comModal = document.getElementById("main_detail__complete_modal");
+const openComModal = document.getElementById("main_detail__complete_modal_btn");
+openComModal.addEventListener("click", (e) => {
+  comModal.style.display = "block";
+});
+
+const closeComModal = comModal.querySelector(".main_detail__complete_modal__close_btn");
+closeComModal.addEventListener("click", (e) => {
+  comModal.style.display = "none";
+});
+
+const cancelComModal = comModal.querySelector(".main_detail__complete_modal__cancel_btn");
+cancelComModal.addEventListener("click", (e) => {
+  comModal.style.display = "none";
+});
+</script>
+
+<script>
+const delModal = document.getElementById("main_detail__delete_modal");
+const openDelModal = document.getElementById("main_detail__delete_modal_btn");
+openDelModal.addEventListener("click", (e) => {
+  delModal.style.display = "block";
+});
+
+const closeDelModal = delModal.querySelector(".main_detail__delete_modal__close_btn");
+closeDelModal.addEventListener("click", (e) => {
+  delModal.style.display = "none";
+});
+
+const cancelDelModal = delModal.querySelector(".main_detail__delete_modal__cancel_btn");
+cancelDelModal.addEventListener("click", (e) => {
+  delModal.style.display = "none";
+});
+</script>
+
 <script>
   // 댓글 수정
   const changeForm = (id, content) => {
@@ -435,5 +501,8 @@ function post_like(id) {
         }
     })
 }
+</script>
+<script>
+
 </script>
 {% endblock content%}
