--- a/static/css/login.css
+++ b/static/css/login.css
@@ -177,7 +177,15 @@ hr {
   margin-top: 1rem;
 }
 
-.login__sim__soc button {
+.login__sim__soc div:nth-child(2) {
+  padding: 0.2rem 0 0 0;
+}
+
+.login__sim__soc img {
+  margin: 0.25rem 0;
+}
+
+/* .login__sim__soc button {
   cursor: pointer;
   width: 4.5rem;
   height: 4.5rem;
@@ -188,4 +196,4 @@ hr {
   font-size: 1rem;
   font-weight: 100;
   color: #8c8c8c;
-}
+} */
